# musicbrainz-cache

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  rebuild-cache.yml
migrations/: 0001_initial.sql  0002_mb_artist_name_trgm_index.sql
schema/: create_database.sql  create_indexes.sql
scripts/: download_dump.py  filter_artists.py  import_tsv.py  run_pipeline.py
src/: download.rs  filter.rs  import.rs  lib.rs  main.rs  schema.rs  state.rs
tests/: conftest.py  download_test.rs  filter_test.rs  idempotency_test.rs  import_test.rs  logger_smoke_test.rs  parity_test.rs  resume_integration_test.rs  state_test.rs
tests/fixtures/: area  area_type  artist  artist_alias  artist_credit  artist_credit_name  artist_tag  gender  l_release_group_url  l_release_url  library.db  library_artists.txt  link  link_type  medium  recording  release  release_group  tag  track  url
tests/fixtures/mbdump/: area  area_type  artist  artist_alias  artist_credit  artist_credit_name  artist_tag  gender  medium  recording  release_group  tag  track
tests/integration/: conftest.py  test_import_pipeline.py
tests/unit/: test_download_dump.py  test_filter_artists.py  test_filter_artists_rust.py  test_import_tsv.py
