[package]
name = "musicbrainz-cache"
version = "0.1.0"
edition = "2021"
description = "ETL pipeline for building a WXYC MusicBrainz cache database"

[lib]
name = "musicbrainz_cache"
path = "src/lib.rs"

[[bin]]
name = "musicbrainz-cache"
path = "src/main.rs"

[dependencies]
wxyc-etl = "0.1.0"
postgres = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking"] }
bzip2 = "0.5"
regex-lite = "0.1"
tar = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tiny_http = "0.12"
