[project]
name = "musicbrainz-cache"
version = "0.1.0"
description = "ETL pipeline for building a WXYC MusicBrainz cache database"
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "rapidfuzz>=3.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "postgres: marks tests that need a PostgreSQL database",
]
addopts = "-m 'not postgres'"
testpaths = ["tests"]
